--- a/package.json
+++ b/package.json
@@ -10,17 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.23.4",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-export-namespace-from": "^7.23.4",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-numeric-separator": "^7.23.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
+    "@babel/plugin-transform-optional-catch-binding": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@npmcli/fs": "^3.1.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "uglify-js": "^3.17.4",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
